--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,25 @@ body {
   color: #fff;
 }
 
-/* .banner-slide::before {
-  content: '';
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  /* Gradient from black to transparent */
-/* z-index: 1; */
-/* Place the gradient above the image */
+.maintext {
+  padding: 10px 0;
+  background: linear-gradient(to right, hsl(0, 0%, 30%) 0, #FFDD95 10%, hsl(0, 0%, 30%) 20%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 5s infinite linear;
+}
+
+@keyframes shine {
+  0% {
+    background-position: 0;
+  }
+
+  60% {
+    background-position: 600px;
+  }
+
+  100% {
+    background-position: 900px;
+  }
+}
