--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   color: #fff;
 }
 
-.maintext {
+.animatedtext {
   padding: 10px 0;
   background: linear-gradient(to right, hsl(0, 0%, 30%) 0, #FFDD95 10%, hsl(0, 0%, 30%) 20%);
   background-clip: text;
