--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,13 @@ body {
     background-position: 900px;
   }
 }
+
+.slick-prev:before,
+.slick-next:before {
+  font-family: '';
+  font-size: 20px;
+  line-height: 0;
+  color: #FFDD95;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
