--- a/src/index.css
+++ b/src/index.css
@@ -42,10 +42,29 @@ body {
 
 .slick-prev:before,
 .slick-next:before {
-  font-family: '';
-  font-size: 20px;
+  font-family: 'slick';
+  font-size: 25px;
   line-height: 0;
   color: #FFDD95;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.anticon svg {
+  display: inline-block;
+  color: #FFDD95;
+  font-size: 25px;
+}
+
+.ant-modal .ant-modal-content {
+  background-color: #2c281f;
+  color: white;
+}
+
+.ant-modal .ant-modal-title {
+  background-color: #2c281f;
+  color: #FFDD95;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
